# Sub-Agent-MCP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: agents.example.yaml
docker/mock_mcp/: filesystem_server.py  search_server.py
scripts/: bump-tag.sh
src/sub_agent_mcp/: __init__.py  logging.py  main.py
src/sub_agent_mcp/agent/: __init__.py  builder.py  errors.py  executor.py
src/sub_agent_mcp/config/: __init__.py  errors.py  loader.py  schema.py
src/sub_agent_mcp/mcp_client/: __init__.py  manager.py  tool_registry.py
src/sub_agent_mcp/server/: __init__.py  openapi.py  tools.py
tests/: conftest.py  test_agent_tools.py  test_builder.py  test_config.py  test_list_agents.py  test_logging.py  test_openapi.py  test_spawn_agent.py  test_tool_registry.py
