[project]
name = "sub-agent-mcp"
version = "0.1.0"
description = "MCP server for LLM delegation and sub-agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.27,<2",
    "langchain>=1.0",
    "langchain-openai",
    "langchain-mcp-adapters",
    "pydantic>=2.7",
    "pyyaml",
    "structlog",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
]

[project.scripts]
sub-agent-mcp = "sub_agent_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_agent_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src/sub_agent_mcp" = "sub_agent_mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
